[package]
name = "audio-engine"
description = "A audio playback library"
version = "0.1.0"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
edition = "2018"
repository = "https://github.com/Rodrigodd/audio-engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["audio", "playback", "wav", "ogg"]
categories = ["multimedia::audio"]
exclude = ["examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcd = "2"
lewton = "0.10"
hound = "3"
cpal = "0.13"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
