[package]
name = "audio-engine"
description = "A audio playback library"
version = "0.4.1"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
edition = "2018"
repository = "https://github.com/Rodrigodd/audio-engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["audio", "playback", "wav", "ogg"]
categories = ["multimedia::audio"]
exclude = ["examples/"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "music"
crate-type = ["cdylib"]
path = "examples/music.rs"

[dependencies]
gcd = "2"
lewton = "0.10"
hound = "3"
cpal = { version = "0.14.0", features = ["wasm-bindgen"] }
log = "0.4.17"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.6", features = ["logger"] }

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9.0"

[[bench]]
name = "my_benchmark"
harness = false
